# knodiq

./: .gitignore  README.md  battery-report.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: greetings.yml
.zed/: debug.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/src/: api_state.rs  app_state.rs  audio_api.rs  lib.rs  main.rs
src-tauri/src/api/: app_state.rs  mod.rs  playback.rs  setup.rs  window.rs
src-tauri/src/api/data/: mod.rs  node_type.rs  note_data.rs  region_data.rs  track_data.rs
src-tauri/src/api/graph/: graph.rs  mod.rs  node_type.rs
src-tauri/src/api/graph/node/: audio_shader_node.rs  mod.rs  node.rs  node_type.rs
src-tauri/src/api/mixing/: mixer.rs  mixer_command.rs  mixing_thread.rs  mod.rs  state_emitter.rs
src-tauri/src/api/mixing/region/: buffer_region.rs  mod.rs  region.rs  region_data.rs  region_op.rs
src-tauri/src/api/mixing/state/: mixer_state.rs  mod.rs  region_state.rs  track_state.rs
src-tauri/src/api/mixing/track/: mod.rs  track.rs
src-tauri/src/api/state/: graph_state.rs  mixer_state.rs  mod.rs  node_data.rs  note_state.rs  region_state.rs  track_state.rs
src-tauri/src/wrapper/: mixer_wrapper.rs  track_wrapper.rs
src-tauri/src/wrapper/track/: buffer_track_wrapper.rs
src/components/: PlaybackControlButton.tsx  SplitView.tsx
src/components/button/: DropdownMenu.tsx  PlaybackControlButton.tsx
src/components/controls/: BasicButton.tsx  DropdownMenu.tsx  TextField.tsx
src/components/elements/: SectionGroup.tsx
src/components/pane/: HSplitView.tsx  PaneComponent.tsx  PaneData.ts  PaneDragZone.tsx  PaneHeader.tsx  PaneView.tsx  PaneViewRoot.tsx  SplitView.tsx  VSplitView.tsx
src/components/pane/type/: EditorData.ts  PaneContext.ts
src/components/split_view/: HSplitView.tsx  VSplitView.tsx
src/features/editor_header/: EditorHeader.tsx  WindowHeader.tsx  editor_header.css
src/features/pane/graph_editor/: CircleButton.tsx  GraphEditor.tsx  NodeBox.tsx  NodeConnector.tsx
src/features/pane/node_editor/: NodeBox.tsx  NodeConnector.tsx  NodeEditor.tsx
src/features/track_area/: RegionView.tsx  TrackArea.tsx  TrackListContent.tsx  TrackListItem.tsx
src/features/tracks_area/: RegionView.tsx  TrackListContent.tsx  TrackListItem.tsx  TracksArea.tsx
src/features/window/: window.ts
src/features/window_header/: WindowHeader.tsx
src/lib/audio_api/: graph_state.ts  mixer_state.ts  note_state.ts  region.ts  region_data_state.ts  region_state.ts  track.ts  track_state.ts
src/lib/type/: EditorData.ts  PaneContext.ts  PaneNode.ts
window/: track_config.html
(+15 files in other folders)
