[package]
name = "knodiq"
version = "0.1.0"
description = "A revolutionary DAW with AudioShader feature"
authors = ["hatya-mouse"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "knodiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
knodiq_engine = { git = "https://github.com/Hatya-mouse/knodiq_engine" }
knodiq_audio_shader = { git = "https://github.com/Hatya-mouse/knodiq_audio_shader" }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.4.0"
tauri-plugin-os = "2"
