#
#  Copyright 2025 Shuntaro Kasatani
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
# 

[package]
name = "knodiq"
version = "0.1.0"
description = "A revolutionary DAW with AudioShader feature"
authors = ["hatya-mouse"]
edition = "2024"
license = "Apache-2.0"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "knodiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
knodiq_engine = { git = "https://github.com/Hatya-mouse/knodiq_engine" }
knodiq_audio_shader = { git = "https://github.com/Hatya-mouse/knodiq_audio_shader" }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.4.0"
tauri-plugin-os = "2"
uuid = "1.17.0"
